separated expense tab from collection tab and manage stationary as well